# open_ai_api

./: Cargo.toml  README.md
src/: lib.rs
src/models/: mod.rs
src/structs/: errors.rs  mod.rs  model.rs
